swap out png for jpg, scrolling on mobile fix

--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
     margin: 0rem;
     padding: 0rem;
-    background-image: url('background.png');
+    background-image: url('background.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-position: center;
+    min-height: 100%;
+    min-width: 100%;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -86,7 +89,7 @@ a:hover {
         align-items: center;
     }
     body {
-        background-image: url('background-phone.png');
+        background-image: url('background-phone.jpeg');
     }
 
 }
